# SUMO-ENV

./: README.md  pyproject.toml
SUMO/: README.md  sumoENV.py  sumoTrafficLightStatus.py
SUMO/QT/: QT.net.xml  QT.rou.xml  QT.sumocfg
